--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <br>
 
 <a href="https://c.tenor.com/jUMex_rdqPwAAAAM/among-us-twerk.gif">sus</a>
+<br>
+<a href="teine html aga nata teine.html">sus</a>
 
 
 <ul>
