--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <h4>amougs</h4>
 <h5>amougs</h5>
 
-<img src="https://c.tenor.com/jUMex_rdqPwAAAAM/among-us-twerk.gif">
+<img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F9%2F2021%2F08%2F16%2Fbritish-vandal-pours-beans-in-mail-slots-FT-BLOG0821.jpg&q=60">
 
 <br>
 <br>
 <br>
 
-<a href="https://c.tenor.com/jUMex_rdqPwAAAAM/among-us-twerk.gif">sus</a>
+<a href="what">sus</a>
 <br>
 <a href="teine html aga nata teine.html">sus</a>
 
