--- a/teine html aga nata teine.html
+++ b/teine html aga nata teine.html
@@ -5,13 +5,15 @@
 <h4>amougs</h4>
 <h5>amougs</h5>
 
-<img src="https://www.bushbeans.com/-/jssmedia/BushsBeans/Bean-song/Hero_Carousel_BeanBackground.jpg?h=1080&iar=0&w=1920&hash=9EFEADD0CD7CC0D5BA58B5BDFAB43DB6">
+//<img src="https://www.bushbeans.com/-/jssmedia/BushsBeans/Bean-song/Hero_Carousel_BeanBackground.jpg?h=1080&iar=0&w=1920&hash=9EFEADD0CD7CC0D5BA58B5BDFAB43DB6">
 
 <br>
 <br>
 <br>
 
 <a href="https://www.bushbeans.com/-/jssmedia/BushsBeans/Bean-song/Hero_Carousel_BeanBackground.jpg?h=1080&iar=0&w=1920&hash=9EFEADD0CD7CC0D5BA58B5BDFAB43DB6">sus</a>
+<br>
+<a href="https://beanseater420.github.io/The-world-of-beans/index.html">ok ma tahan tagasi minna n[[d</a>
 
 
 <ul>
