--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@ img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.o
 
 <a href="what">sus</a>
 <br>
-<a href="teine html aga nata teine.html">sus</a>
+<br>
+<br>
+<a href="teine html aga nata teine.html">Veeb site Teine.v2</a>
 
 
 <ul>
