--- a/teine html aga nata teine.html
+++ b/teine html aga nata teine.html
@@ -20,7 +20,7 @@ img src="https://www.bushbeans.com/-/jssmedia/BushsBeans/Bean-song/Hero_Carousel
 <br>
 <a href="https://beanseater420.github.io/The-world-of-beans/index.html">ok ma tahan tagasi minna n[[d</a>
 
-
+<a href="https://grabify.link/CRLM84">ole cool gamer ja donate oma ip meile...</a>
 <ul>
     <li>beans</li>
     <ul><li>susmungus</li>
