Update teine html aga nata teine.html

--- a/teine html aga nata teine.html
+++ b/teine html aga nata teine.html
@@ -23,3 +23,8 @@
     <ul><li>susmungus</li>
     </ul>
 </ul>
+
+
+<br>
+
+<a href="https://beanseater420.github.io/The-world-of-beans/hidden.html">ok n[[d</a>
