Update teine html aga nata teine.html

--- a/teine html aga nata teine.html
+++ b/teine html aga nata teine.html
@@ -199,5 +199,5 @@
 <br>
 <br>
 <br>
-
-<a href="https://beanseater420.github.io/The-world-of-beans/hidden.html">ok n[[d</a>
+<p>nothing to see here..</p>
+<a href="https://beanseater420.github.io/The-world-of-beans/hidden.html">.</a>
