--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <p>see on paragraaf</p>
-<h1>amougs</h1>
-<h2>amougs</h2>
-<h3>amougs</h3>
-<h4>amougs</h4>
-<h5>amougs</h5>
+<h1>See on 1</h1>
+<h2>sen 2</h2>
+<h3>sen 3</h3>
+<h4>sen 4</h4>
+<h5>sen 4s</h5>
 
 
 
@@ -11,7 +11,7 @@
 <br>
 <br>
 
-<a href="what">sus</a>
+<a href="what">brug</a>
 <br>
 <br>
 <br>
@@ -20,6 +20,6 @@
 
 <ul>
     <li>beans</li>
-    <ul><li>susmungus</li>
+    <ul><li>sb</li>
     </ul>
 </ul>
